# Quran-md

./: pyproject.toml
Quran/: 1-Al-Faatiha.md  10-Yunus.md  100-Al-Aadiyaat.md  101-Al-Qaari'a.md  102-At-Takaathur.md  103-Al-Asr.md  104-Al-Humaza.md  105-Al-Fil.md  106-Quraish.md  107-Al-Maa'un.md  108-Al-Kawthar.md  109-Al-Kaafiroon.md  11-Hud.md  110-An-Nasr.md  111-Al-Masad.md  112-Al-Ikhlaas.md  113-Al-Falaq.md  114-An-Naas.md  12-Yusuf.md  13-Ar-Ra'd.md  14-Ibrahim.md  15-Al-Hijr.md  16-An-Nahl.md  17-Al-Israa.md  18-Al-Kahf.md  19-Maryam.md  2-Al-Baqara.md  20-Taa-Haa.md  21-Al-Anbiyaa.md  22-Al-Hajj.md  23-Al-Muminoon.md  24-An-Noor.md  25-Al-Furqaan.md  26-Ash-Shu'araa.md  27-An-Naml.md  28-Al-Qasas.md  29-Al-Ankaboot.md  3-Aal-i-Imraan.md  30-Ar-Room.md  31-Luqman.md  (+75 more)
quran_md/: generateQuran.py
