[tool.poetry]
name = "quran-md"
version = "0.1.0"
description = ""
authors = ["Ashfaq Farooqui <ashfaq@ashfaqfarooqui.me>"]
readme = "README.md"
packages = [{include = "quran_md"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
